fix: flickering on hover + flow buttons styling

--- a/packages/react-ui/src/styles.css
+++ b/packages/react-ui/src/styles.css
@@ -48,7 +48,7 @@
     --warning: 47 96% 53%;
     --warning-300: 28 80% 31%;
 
-    --add-button-shadow: 0px 0px 0px 6px hsl(var(--primary-100));
+    --add-button-shadow: 0px 0px 0px 7px hsl(var(--primary-100));
 
     --light-blue: 214 16% 70%;
     --chart-1: 12 76% 61%;
